# swuSearch

./: .gitignore  README.md  image-search-app-0.2.spec  pdf_search_app.py  pyproject.toml  swu_search_app-0.2.spec
scripts/: build_executable.py
src/image_search_app/: main.py
src/image_search_app/classes/: card.py
src/image_search_app/classes/cards/: __init__.py  event.py  leader.py  unit.py  upgrade.py
src/image_search_app/scripts/: batch_img_to_card.py  card_classifier.py  img_to_card.py  ocr_search_img.py  pdf_to_card.py  scan_worker.py  search_filters.py  search_for_img_file.py
src/swu_search_app/: main.py
src/swu_search_app/classes/: card.py
src/swu_search_app/scripts/: pdf_to_card.py  scan_worker.py  search_filters.py  search_for_pdf.py
