[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-search-app"
version = "0.1.0"
description = "Starter PyQt project configured for EasyOCR + OpenCV"
authors = [{name = ""}]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15",
    "pymupdf>=1.24",
    "opencv-python>=4.8",
    "numpy<2.3.0,>=1.24",
    "appdirs>=1.4.4",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.setuptools.package-data]
image_search_app = []

[tool.setuptools.packages.find]
where = ["src"]
